# air-gapped

./: .gitignore  .gitmodules  LICENSE  README.md
.github/workflows/: update-cs-research.yml
PlugNPlay/: ssh_connect_rx.py
Stego/: SteganographyDocumentation.docx  UI cyber (1).docx  exct.py  exp.py  image.py  stegoburgerpy.py  txt.txt
preliminary_tests/: .a.py.swp  .b.py.swp  CMakeLists.txt  a.py  main.c  plot_165_170_mhz.py  sweep_output.csv  sweep_output_random_data.csv  transmit
preliminary_tests/include/: macros.h  transmitter.h
preliminary_tests/src/: main.c  transmitter.c
preliminary_tests/tests/: test_main.cpp  test_main_BACKUP_184300.cpp  test_main_LOCAL_184300.cpp
publications/: readme.md
receiver/: Makefile  README.md  analysis_and_advice.md  burger_stack_gui.c  burger_stack_gui.h  receiver  receiver fftw3.c  receiver kind of works.c  receiver.c  receiver_diagram.md  secret_formula.c  secret_formula.h  test.iq  yourcode
receiver/data/myenbv/: pyvenv.cfg
receiver/data/myenv/: pyvenv.cfg
receiver/graph/: graph.py
receiver/tests/: Makefile  test_receiver.c
software-based-detection/: README.md
transmitter/attack_techniques/cpu/odini/: readme.md
transmitter/attack_techniques/cpu/odini/src/: main  main.c
transmitter/attack_techniques/power_supply/: CMakeLists.txt  readme.md
transmitter/attack_techniques/power_supply/include/: transmitter.h
transmitter/attack_techniques/power_supply/scripts/: analyze_sweep_data.py  run.sh
transmitter/attack_techniques/power_supply/src/: main.c  transmitter.c
